[package]
name = "dragonfly-client"
description = "Dragonfly client written in Rust"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[[bin]]
name = "dfdaemon"
path = "src/bin/dfdaemon/main.rs"

[[bin]]
name = "dfget"
path = "src/bin/dfget/main.rs"

[[bin]]
name = "dfstore"
path = "src/bin/dfstore/main.rs"

[[bin]]
name = "dfcache"
path = "src/bin/dfcache/main.rs"

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-client-config.workspace = true
dragonfly-client-storage.workspace = true
dragonfly-client-backend.workspace = true
dragonfly-client-util.workspace = true
dragonfly-api.workspace = true
rcgen.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
tracing.workspace = true
validator.workspace = true
humantime.workspace = true
serde.workspace = true
chrono.workspace = true
prost-wkt-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
warp.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
url.workspace = true
http.workspace = true
openssl.workspace = true
clap.workspace = true
anyhow.workspace = true
blake3.workspace = true
bytesize.workspace = true
uuid.workspace = true
percent-encoding.workspace = true
tokio-rustls.workspace = true
serde_json.workspace = true
lru.workspace = true
fs2.workspace = true
lazy_static = "1.5"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "chrono"] }
tracing-appender = "0.2.3"
rolling-file = "0.2.0"
tracing-opentelemetry = "0.18.0"
tracing-flame = "0.2.0"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
pprof = { version = "0.14", features = ["flamegraph", "protobuf-codec"] }
prometheus = { version = "0.13", features = ["process"] }
tonic-health = "0.12.3"
bytes = "1.10"
sysinfo = "0.32.1"
tower = { version = "0.4.13", features = ["limit", "load-shed", "buffer"] }
indicatif = "0.17.11"
dashmap = "6.1.0"
hashring = "0.3.6"
fslock = "0.2.1"
leaky-bucket = "1.1.2"
http-body-util = "0.1.2"
futures-util = "0.3.31"
termion = "4.0.3"
tabled = "0.18.0"
path-absolutize = "3.1.1"
rand = "0.8.5"

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.4", features = ["profiling", "stats", "unprefixed_malloc_on_supported_platforms", "background_threads"] }

[target.'cfg(target_os = "linux")'.dependencies]
jemalloc_pprof = "0.4.2"

[package.metadata.deb.variants.x86_64-unknown-linux-gnu]
maintainer = "Dragonfly <dragonfly-maintainers@googlegroups.com>"
priority = "optional"
section = "rust"
assets = [
  [
    "../target/x86_64-unknown-linux-gnu/release/dfget",
    "usr/bin/dfget",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-gnu/release/dfdaemon",
    "usr/bin/dfdaemon",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-gnu/release/dfcache",
    "usr/bin/dfcache",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-gnu/release/dfstore",
    "usr/bin/dfstore",
    "755",
  ],
  [
    "../ci/dfdaemon.service",
    "lib/systemd/system/dfdaemon.service",
    "644",
  ],
  [
    "../CONTRIBUTING.md",
    "usr/share/doc/client/CONTRIBUTING.md",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/client/LICENSE",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/client/README.md",
    "644",
  ],
]

[package.metadata.deb.variants.x86_64-unknown-linux-musl]
maintainer = "Dragonfly <dragonfly-maintainers@googlegroups.com>"
section = "rust"
priority = "optional"
assets = [
  [
    "../target/x86_64-unknown-linux-musl/release/dfget",
    "usr/bin/dfget",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-musl/release/dfdaemon",
    "usr/bin/dfdaemon",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-musl/release/dfcache",
    "usr/bin/dfcache",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-musl/release/dfstore",
    "usr/bin/dfstore",
    "755",
  ],
  [
    "../ci/dfdaemon.service",
    "lib/systemd/system/dfdaemon.service",
    "644",
  ],
  [
    "../CONTRIBUTING.md",
    "usr/share/doc/client/CONTRIBUTING.md",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/client/LICENSE",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/client/README.md",
    "644",
  ],
]

[package.metadata.deb.variants.aarch64-unknown-linux-gnu]
maintainer = "Dragonfly <dragonfly-maintainers@googlegroups.com>"
priority = "optional"
section = "rust"
assets = [
  [
    "../target/aarch64-unknown-linux-gnu/release/dfget",
    "usr/bin/dfget",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-gnu/release/dfdaemon",
    "usr/bin/dfdaemon",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-gnu/release/dfcache",
    "usr/bin/dfcache",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-gnu/release/dfstore",
    "usr/bin/dfstore",
    "755",
  ],
  [
    "../ci/dfdaemon.service",
    "lib/systemd/system/dfdaemon.service",
    "644",
  ],
  [
    "../CONTRIBUTING.md",
    "usr/share/doc/client/CONTRIBUTING.md",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/client/LICENSE",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/client/README.md",
    "644",
  ],
]

[package.metadata.deb.variants.aarch64-unknown-linux-musl]
maintainer = "Dragonfly <dragonfly-maintainers@googlegroups.com>"
priority = "optional"
section = "rust"
assets = [
  [
    "../target/aarch64-unknown-linux-musl/release/dfget",
    "usr/bin/dfget",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-musl/release/dfdaemon",
    "usr/bin/dfdaemon",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-musl/release/dfcache",
    "usr/bin/dfcache",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-musl/release/dfstore",
    "usr/bin/dfstore",
    "755",
  ],
  [
    "../ci/dfdaemon.service",
    "lib/systemd/system/dfdaemon.service",
    "644",
  ],
  [
    "../CONTRIBUTING.md",
    "usr/share/doc/client/CONTRIBUTING.md",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/client/LICENSE",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/client/README.md",
    "644",
  ],
]

[package.metadata.generate-rpm.variants.x86_64-unknown-linux-gnu]
assets = [
  { source = "../target/x86_64-unknown-linux-gnu/release/dfget", dest = "/usr/bin/dfget", mode = "755" },
  { source = "../target/x86_64-unknown-linux-gnu/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755" },
  { source = "../target/x86_64-unknown-linux-gnu/release/dfcache", dest = "/usr/bin/dfcache", mode = "755" },
  { source = "../target/x86_64-unknown-linux-gnu/release/dfstore", dest = "/usr/bin/dfstore", mode = "755" },
  { source = "../ci/dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
  { source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/client/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.variants.x86_64-unknown-linux-musl]
assets = [
  { source = "../target/x86_64-unknown-linux-musl/release/dfget", dest = "/usr/bin/dfget", mode = "755" },
  { source = "../target/x86_64-unknown-linux-musl/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755" },
  { source = "../target/x86_64-unknown-linux-musl/release/dfcache", dest = "/usr/bin/dfcache", mode = "755" },
  { source = "../target/x86_64-unknown-linux-musl/release/dfstore", dest = "/usr/bin/dfstore", mode = "755" },
  { source = "../ci/dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
  { source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/client/README.md", mode = "644", doc = true },
]
auto-req = "no"

[package.metadata.generate-rpm.variants.aarch64-unknown-linux-gnu]
assets = [
  { source = "../target/aarch64-unknown-linux-gnu/release/dfget", dest = "/usr/bin/dfget", mode = "755" },
  { source = "../target/aarch64-unknown-linux-gnu/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755" },
  { source = "../target/aarch64-unknown-linux-gnu/release/dfcache", dest = "/usr/bin/dfcache", mode = "755" },
  { source = "../target/aarch64-unknown-linux-gnu/release/dfstore", dest = "/usr/bin/dfstore", mode = "755" },
  { source = "../ci/dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
  { source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/client/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.variants.aarch64-unknown-linux-musl]
assets = [
  { source = "../target/aarch64-unknown-linux-musl/release/dfget", dest = "/usr/bin/dfget", mode = "755" },
  { source = "../target/aarch64-unknown-linux-musl/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755" },
  { source = "../target/aarch64-unknown-linux-musl/release/dfcache", dest = "/usr/bin/dfcache", mode = "755" },
  { source = "../target/aarch64-unknown-linux-musl/release/dfstore", dest = "/usr/bin/dfstore", mode = "755" },
  { source = "../ci/dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
  { source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/client/README.md", mode = "644", doc = true },
]
auto-req = "no"
