[package]
name = "dragonfly-client"
description = "Dragonfly client written in Rust"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[[bin]]
name = "dfdaemon"
path = "src/bin/dfdaemon/main.rs"

[[bin]]
name = "dfget"
path = "src/bin/dfget/main.rs"

[[bin]]
name = "dfcache"
path = "src/bin/dfcache/main.rs"

[dependencies]
dragonfly-client-core.workspace = true
dragonfly-client-config.workspace = true
dragonfly-client-storage.workspace = true
dragonfly-client-backend.workspace = true
dragonfly-client-util.workspace = true
# dragonfly-api.workspace = true
dragonfly-api = { git = "file:///codes/dragonflyoss/api_fork", branch = "for_client"}
rcgen.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper-rustls.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
prost-wkt-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
warp.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tokio-stream.workspace = true
reqwest.workspace = true
url.workspace = true
http.workspace = true
openssl.workspace = true
clap.workspace = true
anyhow.workspace = true
bytes.workspace = true
bytesize.workspace = true
humantime.workspace = true
uuid.workspace = true
percent-encoding.workspace = true
tokio-rustls.workspace = true
serde_json.workspace = true
fs2.workspace = true
lazy_static.workspace = true
futures.workspace = true
local-ip-address.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "chrono"] }
tracing-panic = "0.1.2"
tracing-opentelemetry = "0.30.0"
opentelemetry = { version = "0.29.1", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.29.0", default-features = false, features = ["trace", "grpc-tonic", "http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.29.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
rolling-file = "0.2.0"
pprof = { version = "0.15", features = ["flamegraph", "protobuf-codec"] }
prometheus = { version = "0.13", features = ["process"] }
tonic-health = "0.12.3"
sysinfo = { version = "0.32.1", default-features = false, features = ["component", "disk", "network", "system", "user"] }
tower = { version = "0.4.13", features = ["limit", "load-shed", "buffer"] }
indicatif = "0.18.0"
hashring = "0.3.6"
leaky-bucket = "1.1.2"
http-body-util = "0.1.3"
termion = "4.0.5"
tabled = "0.20.0"
path-absolutize = "3.1.1"
dashmap = "6.1.0"
fastrand = "2.3.0"
glob = "0.3.2"
console-subscriber = "0.4.1"

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.4", features = ["profiling", "stats", "unprefixed_malloc_on_supported_platforms", "background_threads"] }

[target.'cfg(target_os = "linux")'.dependencies]
jemalloc_pprof = "0.4.2"

[package.metadata.deb.variants.x86_64-unknown-linux-gnu]
maintainer = "Dragonfly <dragonfly-maintainers@googlegroups.com>"
priority = "optional"
section = "rust"
assets = [
  [
    "../target/x86_64-unknown-linux-gnu/release/dfget",
    "usr/bin/dfget",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-gnu/release/dfdaemon",
    "usr/bin/dfdaemon",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-gnu/release/dfcache",
    "usr/bin/dfcache",
    "755",
  ],
  [
    "../ci/dfdaemon.service",
    "lib/systemd/system/dfdaemon.service",
    "644",
  ],
  [
    "../CONTRIBUTING.md",
    "usr/share/doc/client/CONTRIBUTING.md",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/client/LICENSE",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/client/README.md",
    "644",
  ],
]

[package.metadata.deb.variants.x86_64-unknown-linux-musl]
maintainer = "Dragonfly <dragonfly-maintainers@googlegroups.com>"
section = "rust"
priority = "optional"
assets = [
  [
    "../target/x86_64-unknown-linux-musl/release/dfget",
    "usr/bin/dfget",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-musl/release/dfdaemon",
    "usr/bin/dfdaemon",
    "755",
  ],
  [
    "../target/x86_64-unknown-linux-musl/release/dfcache",
    "usr/bin/dfcache",
    "755",
  ],
  [
    "../ci/dfdaemon.service",
    "lib/systemd/system/dfdaemon.service",
    "644",
  ],
  [
    "../CONTRIBUTING.md",
    "usr/share/doc/client/CONTRIBUTING.md",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/client/LICENSE",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/client/README.md",
    "644",
  ],
]

[package.metadata.deb.variants.aarch64-unknown-linux-gnu]
maintainer = "Dragonfly <dragonfly-maintainers@googlegroups.com>"
priority = "optional"
section = "rust"
assets = [
  [
    "../target/aarch64-unknown-linux-gnu/release/dfget",
    "usr/bin/dfget",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-gnu/release/dfdaemon",
    "usr/bin/dfdaemon",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-gnu/release/dfcache",
    "usr/bin/dfcache",
    "755",
  ],
  [
    "../ci/dfdaemon.service",
    "lib/systemd/system/dfdaemon.service",
    "644",
  ],
  [
    "../CONTRIBUTING.md",
    "usr/share/doc/client/CONTRIBUTING.md",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/client/LICENSE",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/client/README.md",
    "644",
  ],
]

[package.metadata.deb.variants.aarch64-unknown-linux-musl]
maintainer = "Dragonfly <dragonfly-maintainers@googlegroups.com>"
priority = "optional"
section = "rust"
assets = [
  [
    "../target/aarch64-unknown-linux-musl/release/dfget",
    "usr/bin/dfget",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-musl/release/dfdaemon",
    "usr/bin/dfdaemon",
    "755",
  ],
  [
    "../target/aarch64-unknown-linux-musl/release/dfcache",
    "usr/bin/dfcache",
    "755",
  ],
  [
    "../ci/dfdaemon.service",
    "lib/systemd/system/dfdaemon.service",
    "644",
  ],
  [
    "../CONTRIBUTING.md",
    "usr/share/doc/client/CONTRIBUTING.md",
    "644",
  ],
  [
    "../LICENSE",
    "usr/share/doc/client/LICENSE",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/client/README.md",
    "644",
  ],
]

[package.metadata.generate-rpm.variants.x86_64-unknown-linux-gnu]
assets = [
  { source = "../target/x86_64-unknown-linux-gnu/release/dfget", dest = "/usr/bin/dfget", mode = "755" },
  { source = "../target/x86_64-unknown-linux-gnu/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755" },
  { source = "../target/x86_64-unknown-linux-gnu/release/dfcache", dest = "/usr/bin/dfcache", mode = "755" },
  { source = "../ci/dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
  { source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/client/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.variants.x86_64-unknown-linux-musl]
assets = [
  { source = "../target/x86_64-unknown-linux-musl/release/dfget", dest = "/usr/bin/dfget", mode = "755" },
  { source = "../target/x86_64-unknown-linux-musl/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755" },
  { source = "../target/x86_64-unknown-linux-musl/release/dfcache", dest = "/usr/bin/dfcache", mode = "755" },
  { source = "../ci/dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
  { source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/client/README.md", mode = "644", doc = true },
]
auto-req = "no"

[package.metadata.generate-rpm.variants.aarch64-unknown-linux-gnu]
assets = [
  { source = "../target/aarch64-unknown-linux-gnu/release/dfget", dest = "/usr/bin/dfget", mode = "755" },
  { source = "../target/aarch64-unknown-linux-gnu/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755" },
  { source = "../target/aarch64-unknown-linux-gnu/release/dfcache", dest = "/usr/bin/dfcache", mode = "755" },
  { source = "../ci/dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
  { source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/client/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.variants.aarch64-unknown-linux-musl]
assets = [
  { source = "../target/aarch64-unknown-linux-musl/release/dfget", dest = "/usr/bin/dfget", mode = "755" },
  { source = "../target/aarch64-unknown-linux-musl/release/dfdaemon", dest = "/usr/bin/dfdaemon", mode = "755" },
  { source = "../target/aarch64-unknown-linux-musl/release/dfcache", dest = "/usr/bin/dfcache", mode = "755" },
  { source = "../ci/dfdaemon.service", dest = "/lib/systemd/system/dfdaemon.service", config = true, mode = "644" },
  { source = "../CONTRIBUTING.md", dest = "/usr/share/doc/client/CONTRIBUTING.md", mode = "644", doc = true },
  { source = "../LICENSE", dest = "/usr/share/doc/client/LICENSE.md", mode = "644", doc = true },
  { source = "../README.md", dest = "/usr/share/doc/client/README.md", mode = "644", doc = true },
]
auto-req = "no"
