[package]
name = "preheat"
description = "An example of using the Dragonfly client to preheat an OCI image via the P2P network"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
dragonfly-client-util.workspace = true
tokio.workspace = true
anyhow.workspace = true
