[package]
name = "request"
description = "Examples of using the Dragonfly client request module to download files and preheat OCI images via the P2P network"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "get"
path = "src/bin/get.rs"

[[bin]]
name = "preheat"
path = "src/bin/preheat.rs"

[dependencies]
dragonfly-client-util.workspace = true
tokio.workspace = true
anyhow.workspace = true
